forgotten notes and A BALLER CMDUTIL HOTFIX, Huzzah!